syntax = "proto3";

package order;

option java_multiple_files = true;
option java_package = "com.rideApp.BFF.order";
option java_outer_classname = "OrderProto";

service OrderService {
  rpc GetRecentOrders (GetRecentOrdersRequest) returns (OrderListResponse);
}

message GetRecentOrdersRequest {
  string user_id = 1;
  int32 limit = 2;
}

message Order {
  string order_id = 1;
  string status = 2;
  double amount = 3;
  int64 created_at_epoch = 4;
}

message OrderListResponse {
  repeated Order orders = 1;
}
