syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.rideApp.BFF.user";
option java_outer_classname = "UserProto";

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
}
